[gd_scene load_steps=26 format=3 uid="uid://pguo6wkoqqp"]

[ext_resource type="Script" path="res://Scripts/slime_boss.gd" id="1_bu5et"]
[ext_resource type="Texture2D" uid="uid://d4igp34wxntd1" path="res://Texture/boss/slime_shadow.png" id="2_ci5c1"]
[ext_resource type="Shader" uid="uid://wj8slnoovomr" path="res://Shaders/hit_flash.tres" id="2_p33sd"]
[ext_resource type="Texture2D" uid="uid://exsypylwk1qo" path="res://Texture/boss/kingslime.PNG" id="4_1h4q1"]
[ext_resource type="PackedScene" uid="uid://bdum5bui01qx5" path="res://Scenes/hurt_box.tscn" id="5_coflr"]
[ext_resource type="Texture2D" uid="uid://ci7d3h1tv7sc8" path="res://Texture/FX/spritesheet.png" id="5_dyw7o"]
[ext_resource type="PackedScene" uid="uid://c1mwwjkhct6iq" path="res://Scenes/hit_box.tscn" id="6_12w6b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bxtta"]
resource_local_to_scene = true
shader = ExtResource("2_p33sd")
shader_parameter/enable = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_olg1w"]
length = 0.8
step = 0.1

[sub_resource type="Animation" id="Animation_wc7hd"]
resource_name = "charging"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_1h4q1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_dd0gx"]
resource_name = "death"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_1h4q1")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_hrrqr"]
resource_name = "dropping"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_1h4q1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -700), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UltimateHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_0n60a"]
resource_name = "jump"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_1h4q1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -700)]
}

[sub_resource type="Animation" id="Animation_a4qjx"]
resource_name = "walking"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_1h4q1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t70hr"]
_data = {
"RESET": SubResource("Animation_olg1w"),
"charging": SubResource("Animation_wc7hd"),
"death": SubResource("Animation_dd0gx"),
"dropping": SubResource("Animation_hrrqr"),
"jump": SubResource("Animation_0n60a"),
"walking": SubResource("Animation_a4qjx")
}

[sub_resource type="Animation" id="Animation_amrhg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_32sbq"]
resource_name = "hit_flash"
length = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_paktb"]
_data = {
"RESET": SubResource("Animation_amrhg"),
"hit_flash": SubResource("Animation_32sbq")
}

[sub_resource type="Animation" id="Animation_qjfpd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlamEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_dyw7o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlamEffect:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlamEffect:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlamEffect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n71ss"]
resource_name = "slam"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlamEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_dyw7o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlamEffect:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlamEffect:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlamEffect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pwvy6"]
_data = {
"RESET": SubResource("Animation_qjfpd"),
"slam": SubResource("Animation_n71ss")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl6ox"]
size = Vector2(113, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7aoq"]
size = Vector2(115, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4477"]
size = Vector2(122, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo1dv"]
size = Vector2(224, 58)

[node name="slimeboss" type="CharacterBody2D" groups=["Boss", "Boss1"]]
z_index = 4
collision_layer = 4
collision_mask = 0
script = ExtResource("1_bu5et")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 33)
texture = ExtResource("2_ci5c1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_bxtta")
texture = ExtResource("4_1h4q1")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_t70hr")
}
autoplay = "walking"

[node name="HitFlash" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_paktb")
}

[node name="SlamEffect" type="Sprite2D" parent="."]
scale = Vector2(2.4, 2.4)
texture = ExtResource("5_dyw7o")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlamEffect"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_pwvy6")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, -0.5)
shape = SubResource("RectangleShape2D_bl6ox")

[node name="HurtBox" parent="." instance=ExtResource("5_coflr")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-3.5, 0.5)
shape = SubResource("RectangleShape2D_k7aoq")

[node name="HitBox" parent="." instance=ExtResource("6_12w6b")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_w4477")

[node name="UltimateHitBox" parent="." instance=ExtResource("6_12w6b")]
collision_layer = 2
collision_mask = 2
damage = 35

[node name="CollisionShape2D" parent="UltimateHitBox" index="0"]
position = Vector2(-2, 30)
shape = SubResource("RectangleShape2D_wo1dv")
disabled = true

[node name="UltimateTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FinishUltimateTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="UltimateCD" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="UltimateTimer" to="." method="_on_utimate_timer_timeout"]
[connection signal="timeout" from="FinishUltimateTimer" to="." method="_on_finish_ultimate_timer_timeout"]
[connection signal="timeout" from="RecoveryTimer" to="." method="_on_recovery_timer_timeout"]
[connection signal="timeout" from="UltimateCD" to="." method="_on_ultimate_cd_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="UltimateHitBox"]
